Typo in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>
 <a id="don-vito-perleone" class="anchor" href="#don-vito-perleone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Don Vito Perleone</h3>
 
-<p>For the moment, this will be used as a depot my talk slides.</p>
+<p>For the moment, this will be used as a depot for my talk slides.</p>
       </section>
     </div>
 
